# Application icons

occillodir = $(datadir)/occillo/game
occillo_DATA = \
	credits.txt \
	game.ini \
	level1.txt \
	level2.txt \
	level3.txt \
	level4.txt \
	level5.txt \
	level6.txt \
	level7.txt \
	level8.txt \
	level9.txt \
	level10.txt \
	level11.txt \
	level12.txt \
	level13.txt \
	level14.txt \
	level15.txt \
	level16.txt \
	level17.txt \
	level18.txt

clean:
	rm -f *.h