# Application icons

occillodir = $(datadir)/occillo/images
occillo_DATA = \
	occillo.png \
	background.png \
	ball_silver.svg \
	ball_blue.svg \
	ball_l1.svg \
	ball_l2.svg \
	ball_l3.svg \
	ball_l4.svg \
	brick_blue.svg \
	brick_fixed.svg \
	brick_green.svg \
	brick_grey.svg \
	brick_dkgrey.svg \
	brick_ltgreen.svg \
	brick_orange.svg \
	brick_purple.svg \
	brick_red.svg \
	brick_template.svg \
	brick_yellow.svg \
	brick_black.svg \
	checkboxactive.svg \
	checkboxinactive.svg \
	occillo.svg \
	paddle_green.svg \
	paddle_metal.svg \
	paddle_grey.svg \
	pointer.svg \
	selectnext.svg \
	selectprevious.svg \
	volumeslider.svg 

#Desktop shortcut icon.

icondir = $(datadir)/pixmaps
icon_DATA = \
	occillo.png \
	occillo.svg \
	occillo.ico
