# Application music

occillodir = $(datadir)/occillo/music
occillo_DATA = \
	COPYING \
	pip-awalkinthepark.it \
	pip-boilingdeals.it \
	pip-bulldogge.it \
	pip-chewable.it \
	pip-compaction.it \
	pip-dungeonsofsplendor.it \
	pip-hithere.it \
	pip-horizonapproaching.it \
	pip-imadeamistake.it \
	pip-majordisappointment.it \
	pip-megalithsintrouble.it \
	pip-onceagain.it \
	pip-outofit.it \
	pip-ruby.it \
	pip-spindlydeals.it \
	pip-tantrumsgalore.it \
	pip-theserpentswings.it \
	pip-uraniumtolead.it \
	pip-ursusignoramus.it \
	pip-volcanic.it \
	pip-winterinpipia.it

